--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apexcharts": "^3.54.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "firebase": "^11.0.1",
     "ng-apexcharts": "^1.12.0",
     "ngx-scrollbar": "^16.0.0",
     "rxjs": "~7.8.0",
