--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,30 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+/api/.vs/SafeShareAPI/FileContentIndex/308b0148-cee0-4104-b0b9-0f4748e7952e.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/33c6eea9-98f8-4791-aff1-1a303a98fbeb.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/386203ac-5855-4846-96ca-71b18722c809.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/46ed9817-d5dc-47c1-8048-00d07fc0f192.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/4758f1cd-ab9f-4667-829a-06dc5bbb4902.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/627c8e3c-64cf-44a3-8994-78b87088ba5b.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/8215fb27-aeea-44b2-8666-8af10bb800c2.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/8c0db1d6-d6e3-41e5-8174-10dcd5895715.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/9608284c-6c6a-4453-9855-616910580f03.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/a5a52622-ec9b-427e-82fa-2956ff28a2fe.vsidx
+/api/.vs/SafeShareAPI/FileContentIndex/e63179cc-4f60-4485-aa65-fdde177eebbb.vsidx
+/api/.vs/SafeShareAPI/v17/.suo
+/api/.vs/SafeShareAPI/v17/DocumentLayout.backup.json
+/api/SafeShareAPI.Business/obj/Debug/net8.0/SafeShareAPI.Business.assets.cache
+/api/SafeShareAPI.Business/obj/project.nuget.cache
+/api/SafeShareAPI.Data/obj/Debug/net8.0/SafeShareAPI.Data.assets.cache
+/api/SafeShareAPI.Data/obj/project.nuget.cache
+/api/SafeShareAPI.Enum/obj/Debug/net8.0/SafeShareAPI.Enum.assets.cache
+/api/SafeShareAPI.Enum/obj/project.nuget.cache
+/api/SafeShareAPI.Model/obj/Debug/net8.0/SafeShareAPI.Model.assets.cache
+/api/SafeShareAPI.Model/obj/project.nuget.cache
+/api/SafeShareAPI.Provider/obj/Debug/net8.0/SafeShareAPI.Provider.assets.cache
+/api/SafeShareAPI.Provider/obj/project.nuget.cache
+/api/SafeShareAPI/obj/Debug/net8.0/SafeShareAPI.AssemblyInfo.cs
+/api/SafeShareAPI/obj/Debug/net8.0/SafeShareAPI.AssemblyInfoInputs.cache
+/api/SafeShareAPI/obj/Debug/net8.0/SafeShareAPI.assets.cache
+/api/SafeShareAPI/obj/project.nuget.cache
